# aula16_bootcamp

./: biblioteca.db  database.db  main2.py  pyproject.toml  read.py  read_ops.py  vendas.db
planejado/: create.py  exemplo_01_classe.py  exemplo_02_dataclasse.py  exemplo_03_classe_com_validador.py  exemplo_04_dataclasse_com_validador.py  exemplo_05_pydantic.py  exemplo_classe_validador.py
