[project]
name = "aula16-bootcamp"
version = "0.1.0"
description = "exemplo gerais de dict, classe, dataclasse, validador, pydantic, orm, sql_model"
authors = [
    {name = "Marcelo Vasselai",email = "mvasselai@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel (>=0.0.24,<0.0.25)",
    "datetime (>=5.5,<6.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
